--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -52,12 +52,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "20ef5cea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: <re.Match object; span=(21, 27), match='Python'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = 'I am trying to learn Python.'\n",
+    "pattern = r'Python'\n",
+    "matches = re.search(pattern, text)\n",
+    "print('Matches found:', matches)"
    ]
   },
   {
