--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "20ef5cea",
    "metadata": {},
    "outputs": [
@@ -60,14 +60,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matches found: <re.Match object; span=(21, 27), match='Python'>\n"
+      "Matches found: ['Python']\n"
      ]
     }
    ],
    "source": [
     "text = 'I am trying to learn Python.'\n",
     "pattern = r'Python'\n",
-    "matches = re.search(pattern, text)\n",
+    "matches = re.findall(pattern, text)\n",
     "print('Matches found:', matches)"
    ]
   },
@@ -87,7 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution here\n"
+    "\n",
+    "\n"
    ]
   },
   {
