--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -82,13 +82,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bbed1a1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['50', '21']\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "\n"
+    "text = '50 elephants are being chased by 21 hunters.'\n",
+    "pattern = r'\\d+'\n",
+    "matches = re.findall(pattern, text) \n",
+    "print('Matches found:', matches)\n"
    ]
   },
   {
