--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -142,12 +142,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "65011967",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['1@gmail.com', 'kjdue@hui.com', 'jiowe.eceedfw@fwew.com']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = '1@gmail.com, kjdue@hui.com, jiowe.eceedfw@fwew.com'\n",
+    "pattern = r'[^@ \\t\\r\\n]+@\\w+\\.\\w+'\n",
+    "matches = re.findall(pattern, text) \n",
+    "print('Matches found:', matches)"
    ]
   },
   {
