--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -172,12 +172,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "6b954be1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['33pears', '44apples', '55bananas', '66grapes']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = '33pears, 44apples, 55bananas, 66grapes, carrots'\n",
+    "pattern = r'\\d+\\w+'\n",
+    "matches = re.findall(pattern, text) \n",
+    "print('Matches found:', matches)"
    ]
   },
   {
