--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -202,12 +202,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "f18b5e0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subtitute: My favourite color is green, what is your favourite color?\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = 'My favourite colour is green, what is your favourite colour?'\n",
+    "pattern = r'colour'\n",
+    "matches = re.sub(pattern, 'color', text) \n",
+    "print('Subtitute:', matches)"
    ]
   },
   {
