--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -262,12 +262,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "acb9d89a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['29/02/2004', '29-02-2004']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = '29/02/2004, 29-02-2004'\n",
+    "pattern = r'\\d{2}[/-]\\d{2}[/-]\\d{4}'\n",
+    "matches = re.findall(pattern, text) \n",
+    "print('Matches found:', matches)"
    ]
   },
   {
