--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -292,12 +292,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "7c69bd3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['#KanyeWest']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = 'What is #KanyeWest doing?'\n",
+    "pattern = r'#\\w+'\n",
+    "matches = re.findall(pattern, text) \n",
+    "print('Matches found:', matches)"
    ]
   },
   {
