--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -322,12 +322,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "b7e7fb20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['GB', 'DK', 'FR']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = 'GB stands for Great Britain, DK stands for Denmark, FR stands for France.'\n",
+    "pattern = r'\\b[^aeiouAEIOU]\\w\\b'\n",
+    "matches = re.findall(pattern, text) \n",
+    "print('Matches found:', matches)"
    ]
   },
   {
