--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -352,12 +352,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "b8397027",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['Preprocessor', 'preprocessor', 'prepositional', 'predict', 'prehistoric']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = 'Preprocessor, postprocessor, preprocessor, postprocessor, prepositional, postpositional, predict, prehistoric, prepo'\n",
+    "pattern = r'[pP][r][e]\\w{3,}'\n",
+    "matches = re.findall(pattern, text) \n",
+    "print('Matches found:', matches)"
    ]
   },
   {
