--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -385,9 +385,20 @@
    "execution_count": null,
    "id": "f34cc26d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['Mi1rr9RT23m', 'iiiiiiiiiiii', '99999999999', 'Uwwwwwwwwwwww', 'Q123323232323', 'r324546432456', 'PWer3456543454', '11Qwrte843393']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = 'Mi1rr9RT23m, iiiiiiiiiiii, 99999999999, Uwwwwwwwwwwww, Q123323232323, r324546432456, PWer3456543454, Mw32, 11Qwrte843393'\n",
+    "pattern = r'\\b(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)[A-Za-z\\d]{8,}\\b'\n",
+    "matches = re.findall(pattern, text) \n",
+    "print('Matches found:', matches)\n"
    ]
   },
   {
