--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -412,12 +412,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "df995e03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['camera', 'is']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = 'The camera camera camera is 1000 USD, the lens is 500 USD, the tripod is is 150 USD'\n",
+    "pattern = r'\\b(\\w+)\\s+\\1\\b'\n",
+    "matches = re.findall(pattern, text) \n",
+    "print('Matches found:', matches)"
    ]
   },
   {
