--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -442,12 +442,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "d9100f6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['google.com', 'example.com', 'ca.gov', 'abc.com']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = 'https://www.google.com, http://www.example.com, https://www.ca.gov, http://www.abc.com'\n",
+    "pattern = r'\\b[^https?://www\\.]\\w+\\.\\w+\\b'\n",
+    "matches = re.findall(pattern, text) \n",
+    "print('Matches found:', matches)\n"
    ]
   },
   {
