--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -472,12 +472,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "3d10c972",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['192.168.5.18', '10.10.10.10', '1.567.89.1', '78.234.535.21', '123.456.789.0', '321.654.987.0']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = '192.168.5.18, 10.10.10.10, 1.567.89.1, 78.234.535.21, 123.456.789.0, 321.654.987.0, 3333.654.2'\n",
+    "pattern = r'\\b\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\b'\n",
+    "matches = re.findall(pattern, text) \n",
+    "print('Matches found:', matches)"
    ]
   },
   {
