--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -502,12 +502,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "067273f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['@X', '@mroncero', '@2334HGG_', '@KanyeWest', '@1234']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = '@X, @mroncero, @2334HGG_, @KanyeWest, @1234'\n",
+    "pattern = r'@\\b[A-Za-z0-9_]{1,15}\\b'\n",
+    "matches = re.findall(pattern, text) \n",
+    "print('Matches found:', matches)\n"
    ]
   },
   {
