--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -537,7 +537,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution here\n"
+    "text = 'one, two, three, four, five, six, seven, eight, nine, ten, how many numbers are there?'\n",
+    "pattern = r'????????????'\n",
+    "matches = re.findall(pattern, text) \n",
+    "print('Matches found:', matches)"
    ]
   },
   {
