--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -557,9 +557,20 @@
    "execution_count": null,
    "id": "98f58929",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['a', 's', 'l']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = 'aare there any numbers in this text, pleasse tell me'\n",
+    "pattern = r'\\b\\w*(\\w)\\1\\w*\\b' #?????????????????\n",
+    "matches = re.findall(pattern, text)\n",
+    "print('Matches found:', matches) "
    ]
   },
   {
