--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -584,12 +584,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "3ff0911d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['some people are happy']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = 'They said \"some people are happy\", but I am not sure.'\n",
+    "pattern = r'\\\"(.*)?\\\"' \n",
+    "matches = re.findall(pattern, text)\n",
+    "print('Matches found:', matches) "
    ]
   },
   {
