--- a/S02_2_exercises.ipynb
+++ b/S02_2_exercises.ipynb
@@ -617,9 +617,21 @@
    "execution_count": null,
    "id": "4435c171",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['What do you think?', 'What does she think?']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here\n"
+    "text = 'Imagination is more important than knowledge. What do you think?. What does she think?'\n",
+    "pattern = r'[A-Z][^?!.]*\\?' \n",
+    "matches = re.findall(pattern, text)\n",
+    "print('Matches found:', matches) \n",
+    "#preguntar diferencia entre * y +"
    ]
   }
  ],
