Change_doc_name_and_few_changes

--- a/S02_2_exercises_hard.ipynb
+++ b/S02_2_exercises_hard.ipynb
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "d9100f6b",
    "metadata": {},
    "outputs": [
@@ -455,8 +455,8 @@
     }
    ],
    "source": [
-    "text = 'https://www.google.com, http://www.example.com, https://www.ca.gov, http://www.abc.com'\n",
-    "pattern = r'\\b[^https?://www\\.]\\w+\\.\\w+\\b'\n",
+    "text = 'https://www.google.com/djdj, http://www.example.com, https://www.ca.gov, http://www.abc.com'\n",
+    "pattern = r'\\b[^https?://www\\.]\\w+\\.\\w+[^/.*]\\b'\n",
     "matches = re.findall(pattern, text) \n",
     "print('Matches found:', matches)\n"
    ]
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "98f58929",
    "metadata": {},
    "outputs": [
@@ -562,15 +562,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matches found: ['a', 's', 'l']\n"
+      "['a', 's', 'l']\n"
      ]
     }
    ],
    "source": [
     "text = 'aare there any numbers in this text, pleasse tell me'\n",
-    "pattern = r'\\b\\w*(\\w)\\1\\w*\\b' #?????????????????\n",
+    "pattern = r'\\b\\w*(\\w)\\1\\w*\\b'\n",
     "matches = re.findall(pattern, text)\n",
-    "print('Matches found:', matches) "
+    "print(matches) "
    ]
   },
   {
@@ -630,8 +630,7 @@
     "text = 'Imagination is more important than knowledge. What do you think?. What does she think?'\n",
     "pattern = r'[A-Z][^?!.]*\\?' \n",
     "matches = re.findall(pattern, text)\n",
-    "print('Matches found:', matches) \n",
-    "#preguntar diferencia entre * y +"
+    "print('Matches found:', matches) "
    ]
   }
  ],
