--- a/S02_2_exercises_hard.ipynb
+++ b/S02_2_exercises_hard.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "daccef60",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f34cc26d",
    "metadata": {},
    "outputs": [
@@ -390,13 +390,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matches found: ['Mi1rr9RT23m', 'iiiiiiiiiiii', '99999999999', 'Uwwwwwwwwwwww', 'Q123323232323', 'r324546432456', 'PWer3456543454', '11Qwrte843393']\n"
+      "Matches found: ['Mi1rr9RT23m, iiiiiiiiiiii, 99999999999, Uwwwwwwwwwwww, Q123323232323, r324546432456, PWer3456543454, Mw32, 11Qwrte843393']\n"
      ]
     }
    ],
    "source": [
     "text = 'Mi1rr9RT23m, iiiiiiiiiiii, 99999999999, Uwwwwwwwwwwww, Q123323232323, r324546432456, PWer3456543454, Mw32, 11Qwrte843393'\n",
-    "pattern = r'\\b(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)[A-Za-z\\d]{8,}\\b'\n",
+    "pattern = r'\\b(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)[A-Za-z\\d].{8,}\\b'\n",
     "matches = re.findall(pattern, text) \n",
     "print('Matches found:', matches)\n"
    ]
