--- a/S04_3_exercises_after.ipynb
+++ b/S04_3_exercises_after.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,13 +126,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['alquil', 'de', 'coch', 'buena', 'tard', 'soy', 'alba', 'he', 'alquilado', 'un', 'coch', 'para', 'el', 'pr', 'ximo', 'fin', 'de', 'semana', 'y', 'me', 'gustar', 'a', 'saber', 'd', 'nde', 'debo', 'recogerlo', 'yo', 'vivo', 'en', 'barcelona', 'buena', 'tard', 'alba', 'mucha', 'gracia', 'por', 'llamar', 'yo', 'vivo', 'en', 'un', 'pueblo', 'a', '20', 'minuto', 'de', 'barcelona', 'cree', 'que', 'podr', 'as', 'venir', 'a', 'recogerlo', 'el', 'viern', 'depend', 'de', 'a', 'qu', 'hora', 'ya', 'que', 'el', 'viern', 'trabajo', 'me', 'vendr', 'a', 'bien', 'entr', 'la', '17', '00h', 'y', 'la', '19', '00h', 'c', 'mo', 'lo', 'tien', 'lo', 'tengo', 'complicado', 'acabo', 'de', 'trabajar', 'a', 'la', '18', '30', 'y', 'creo', 'que', 'no', 'me', 'dar', 'a', 'tiempo', 'c', 'mo', 'te', 'ir', 'a', 'el', 's', 'bado', 'a', 'primera', 'hora', 'si', 'vinies', 'ant', 'de', 'la', '9', '00h', 'me', 'vendr', 'a', 'bien', 'pue', 'si', 'te', 'parec', 'bien', 'te', 'aviso', 'cuando', 'salga', 'de', 'barcelona', 'sobr', 'la', '8', '00h', 'as', 'cuando', 'llegu', 'ya', 'est', 'todo', 'listo', 'genial', 'alba', 'quedamo', 'as', 'te', 'espero', 'el', 's', 'bado', 'ant', 'de', 'la', '9', '00h']\n"
+     ]
+    }
+   ],
    "source": [
     "#4\n",
     "stemmer = PorterStemmer()\n",
-    "ntlk_stemmeingtext = "
+    "ntlk_stemmeingtext = [stemmer.stem(word) for word in tokeniced_text]\n",
+    "print(ntlk_stemmeingtext)"
    ]
   }
  ],
