S04 ex5 por arreglar

--- a/S04_3_exercises_after.ipynb
+++ b/S04_3_exercises_after.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -142,6 +142,19 @@
     "stemmer = PorterStemmer()\n",
     "ntlk_stemmeingtext = [stemmer.stem(word) for word in tokeniced_text]\n",
     "print(ntlk_stemmeingtext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#5\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "nltk_lemmatizingtext = [lemmatizer.lemmatize(word) for word in tokeniced_text]\n",
+    "print(nltk_lemmatizingtext)\n",
+    "#??????????????????????????????????????????"
    ]
   }
  ],
