S04 ex4 pure python supuesto arreglo pero mismo problema

--- a/S04_3_exercises_after.ipynb
+++ b/S04_3_exercises_after.ipynb
@@ -126,22 +126,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['alquil', 'de', 'coch', 'buena', 'tard', 'soy', 'alba', 'he', 'alquilado', 'un', 'coch', 'para', 'el', 'pr', 'ximo', 'fin', 'de', 'semana', 'y', 'me', 'gustar', 'a', 'saber', 'd', 'nde', 'debo', 'recogerlo', 'yo', 'vivo', 'en', 'barcelona', 'buena', 'tard', 'alba', 'mucha', 'gracia', 'por', 'llamar', 'yo', 'vivo', 'en', 'un', 'pueblo', 'a', '20', 'minuto', 'de', 'barcelona', 'cree', 'que', 'podr', 'as', 'venir', 'a', 'recogerlo', 'el', 'viern', 'depend', 'de', 'a', 'qu', 'hora', 'ya', 'que', 'el', 'viern', 'trabajo', 'me', 'vendr', 'a', 'bien', 'entr', 'la', '17', '00h', 'y', 'la', '19', '00h', 'c', 'mo', 'lo', 'tien', 'lo', 'tengo', 'complicado', 'acabo', 'de', 'trabajar', 'a', 'la', '18', '30', 'y', 'creo', 'que', 'no', 'me', 'dar', 'a', 'tiempo', 'c', 'mo', 'te', 'ir', 'a', 'el', 's', 'bado', 'a', 'primera', 'hora', 'si', 'vinies', 'ant', 'de', 'la', '9', '00h', 'me', 'vendr', 'a', 'bien', 'pue', 'si', 'te', 'parec', 'bien', 'te', 'aviso', 'cuando', 'salga', 'de', 'barcelona', 'sobr', 'la', '8', '00h', 'as', 'cuando', 'llegu', 'ya', 'est', 'todo', 'listo', 'genial', 'alba', 'quedamo', 'as', 'te', 'espero', 'el', 's', 'bado', 'ant', 'de', 'la', '9', '00h']\n"
+      "['alquiler', 'de', 'coche', 'buenas', 'tardes', 'soy', 'alba', 'he', 'alquilad', 'un', 'coche', 'para', 'e', 'pr', 'xim', 'fin', 'de', 'semana', 'y', 'me', 'gustar', 'a', 'saber', 'd', 'nde', 'deb', 'recoger', 'y', 'viv', 'en', 'barcelona', 'buenas', 'tardes', 'alba', 'muchas', 'gracias', 'por', 'llamar', 'y', 'viv', 'en', 'un', 'pueb', 'a', '20', 'minutos', 'de', 'barcelona', 'crees', 'que', 'podr', 'as', 'venir', 'a', 'recoger', 'e', 'viernes', 'depende', 'de', 'a', 'qu', 'hora', 'ya', 'que', 'e', 'viernes', 'trabaj', 'me', 'vendr', 'a', 'bien', 'entre', 'las', '17', '00h', 'y', 'las', '19', '00h', 'c', 'm', '', 'tienes', '', 'teng', 'complicad', 'acab', 'de', 'trabajar', 'a', 'las', '18', '30', 'y', 'cre', 'que', 'n', 'me', 'dar', 'a', 'tiemp', 'c', 'm', 'te', 'ir', 'a', 'e', 's', 'bad', 'a', 'primera', 'hora', 'si', 'vinieses', 'antes', 'de', 'las', '9', '00h', 'me', 'vendr', 'a', 'bien', 'pues', 'si', 'te', 'parece', 'bien', 'te', 'avis', 'cuand', 'salga', 'de', 'barcelona', 'sobre', 'las', '8', '00h', 'as', 'cuand', 'llegues', 'ya', 'est', 'tod', 'list', 'genia', 'alba', 'quedamos', 'as', 'te', 'esper', 'e', 's', 'bad', 'antes', 'de', 'las', '9', '00h']\n"
      ]
     }
    ],
    "source": [
     "#4\n",
-    "stemmer = PorterStemmer()\n",
-    "ntlk_stemmeingtext = [stemmer.stem(word) for word in tokeniced_text]\n",
-    "print(ntlk_stemmeingtext)"
+    "pure_stemmed = [word.rstrip(\"lo\") for word in tokeniced_text]\n",
+    "print(pure_stemmed)\n",
+    "#?????????????????????????????????????????"
    ]
   },
   {
